--- a/code/Trachoma_Data_analysis.Rmd
+++ b/code/Trachoma_Data_analysis.Rmd
@@ -15,9 +15,9 @@ library(ggplot2)
 
 ```{r}
 ## read data
-trachoma_study_data <- read_csv("trachoma_sero_transmission_analysis_study.csv")
-trachoma_indiv_data <- read_csv("trachoma_sero_transmission_analysis_indiv.csv")
-trachoma_cluster_data <- read_csv("trachoma_sero_transmission_analysis_cluster.csv")
+trachoma_study_data <- read_csv("/Users/anitamakori/Library/CloudStorage/Dropbox/mmed_trachoma/data/trachoma_sero_transmission_analysis_study.csv")
+trachoma_indiv_data <- read_csv("/Users/anitamakori/Library/CloudStorage/Dropbox/mmed_trachoma/data/trachoma_sero_transmission_analysis_indiv.csv")
+trachoma_cluster_data <- read_csv("/Users/anitamakori/Library/CloudStorage/Dropbox/mmed_trachoma/data/trachoma_sero_transmission_analysis_cluster.csv")
 
 ## wrangle data
 trachoma_study_data1 <- trachoma_study_data%>%
@@ -29,7 +29,10 @@ trachoma_indiv_data1 <- trachoma_indiv_data%>%
   filter(Country%in%c("Ethiopia","Ethiopia (TAITU)","Ethiopia (WUHA)"))
 
 waghemra_indiv_data <- trachoma_indiv_data1%>%
-  filter(Location%in%"Wag Hemra")
+  filter(Location%in%"Wag Hemra")%>%
+  mutate(pgp3_pos1=recode(pgp3_pos, "1"="pgp3_positive", "0"="pgp3_negative"))%>%
+  mutate(pcr1=recode(pcr, "1"="pcr_positive", "0"="pcr_negative"))%>%
+  mutate(tf1=recode(tf, "1"="tf_positive", "0"="tf_negative"))
 
 trachoma_cluster_data1 <- trachoma_cluster_data%>%
   separate(location_year_name, into = c("Location","CountryYear"), sep=", ")%>%
@@ -51,7 +54,8 @@ age_ab_data <- waghemra_indiv_data%>%
 age_ab_plot <- ggplot(age_ab_data)+
   geom_col(aes(x=age_years, y=prop))+
   theme_bw()+ylim(0,100)+xlim(0,10)+
-  labs(x="Age", y="Proportion", title="Age distribution of Antibody responses")
+  labs(x="Age", y="Proportion", title="Age distribution of\nAntibody responses")+
+  theme(text=element_text(size=16, face="bold"))
 
 age_tf_data <- waghemra_indiv_data%>%
   group_by(age_years,tf)%>%
@@ -64,7 +68,9 @@ age_tf_data <- waghemra_indiv_data%>%
 age_tf_plot <- ggplot(age_tf_data)+
   geom_col(aes(x=age_years, y=prop))+
   theme_bw()+ylim(0,100)+xlim(0,10)+
-  labs(x="Age", y="Proportion", title="Age distribution of clinical disease markers (TF)")
+  labs(x="Age", y="Proportion", title="Age distribution of\nclinical disease markers (TF)")+
+  theme(text=element_text(size=16, face="bold"))
+
 
 
 age_pcr_data <- waghemra_indiv_data%>%
@@ -78,9 +84,14 @@ age_pcr_data <- waghemra_indiv_data%>%
 age_pcr_plot <- ggplot(age_pcr_data)+
   geom_col(aes(x=age_years, y=prop))+
   theme_bw()+ylim(0,100)+xlim(0,10)+
-  labs(x="Age", y="Proportion", title="Age distribution of PCR results")
+  labs(x="Age", y="Proportion", title="Age distribution of\nPCR results")+
+  theme(text=element_text(size=16, face="bold"))
+
 
 plots <- gridExtra::grid.arrange(age_tf_plot, age_pcr_plot, age_ab_plot, nrow=1)
+ggsave("Prevalence_plots1.png",plots, width=14, height=10)
+
+
 
 ```
 
