--- a/code/Trachoma_Data_analysis.Rmd
+++ b/code/Trachoma_Data_analysis.Rmd
@@ -89,7 +89,7 @@ age_pcr_plot <- ggplot(age_pcr_data)+
 
 
 plots <- gridExtra::grid.arrange(age_tf_plot, age_pcr_plot, age_ab_plot, nrow=1)
-ggsave("Prevalence_plots1.png",plots, width=14, height=10)
+#ggsave("Prevalence_plots1.png",plots, width=14, height=10)
 
 
 
